[gd_scene load_steps=2 format=3 uid="uid://cmq0jksv8nadh"]

[ext_resource type="Script" path="res://hud.gd" id="1_wqv15"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_wqv15")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "0
"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = -11.5
offset_right = 83.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 49
text = "Jetpack Joyride Clone!"

[node name="StartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.605
anchor_right = 0.5
anchor_bottom = 0.605
offset_left = -23.0
offset_top = 13.46
offset_right = 23.0
offset_bottom = 44.46
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
